--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>naptivity | Rent Your Condo To Travelers From Around The World</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-	
-	<%= render 'shared/navbar' %>
+	<head>
+	  <title>naptivity | Rent Your Condo To Travelers From Around The World</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	</head>
+	<body>
+		
+		<%= render 'shared/navbar' %>
+		
+		<%= render 'shared/message' %>
 
-	<div class="container">
-		<% flash.each do|name, msg| %>
-			<%= content_tag(:div, msg, class: "alert alert-info")%>
-		<% end %>
-		<%= yield %>
-	</div>
+		<div class="container">
+			<%= yield %>
+		</div>
 
-</body>
+	</body>
 </html>
