--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
       <div class="form-group">        
         <% if @validatable %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
+        <% end %>
         <%= f.password_field :password, :class => 'form-control', :placeholder => 'Password',  autocomplete: "off" %>
       </div>
 
