--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,39 +2,23 @@
 @import "bootstrap";
 @import "toastr";
 
-.avatar-small {
-	width: 38px;
+body {  
+  color: #565a5c;
+  background-color: #F8F8F8;
 }
-
-.avatar-medium {
-	width: 48px;
-}
-
-.avatar-large {
-	width: 68px;
-}
-
-.avatar-full {
-	width: 100%;
-}
-
-body {
- 	color: #565a5c;
- 	background-color: #F8F8F8;
- }
 
 .container {
 	width: 80%;
 }
 
 .navbar-default {
-	background-color: #FFFFFF;
+  background-color: #FFFFFF;
 }
 
 .navbar-default .navbar-brand {
-	color: #FF5A5F;
-	font-size: 2em;
-	font-weight: 400;
+  color: #FF5A5F;
+  font-size: 2em;
+  font-weight: 400;
 }
 
 .btn-primary.btn {
@@ -60,39 +44,39 @@ body {
 }
 
 .btn-default.btn {
-	width: 100%;
-	border-radius: 2px;
-	padding: 10px 0;
-	margin-top: 10px;
+  width: 100%;
+  border-radius: 2px;
+  padding: 10px 0;
+  margin-top: 10px; 
 }
 
 .panel-default .panel-heading {
-	color: #565a5c;
-	background-color: #edefed;
-	font-size: 18px;
-	font-weight: 400;
+  color: #565a5c;
+  background-color: #edefed;
+  font-size: 18px;
+  font-weight: 400
 }
 
 .row-space-1 {
-	margin-top: 6px;
-	margin-bottom: 6px;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .row-space-2 {
-	margin-top: 12px;
-	margin-bottom: 12px;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 .row-space-3 {
-	margin-top: 24px;
-	margin-bottom: 24px;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 .description {
-	color: #575757;
-	font-size: 15px;
-	font-weight: 500;
-	line-height: 25px;
+  color: #575757;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 25px;
 }
 
 .avatar-small {
@@ -112,82 +96,82 @@ body {
 }
 
 .form-group {
-margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .form-control {
-	border-radius: 2px;
-	height: 4rem;
+  border-radius: 2px;
+  height: 4rem;
 }
 
 .sidebar-list {
-	padding-left: 0;
-	list-style: none;
+  padding-left: 0;
+  list-style: none;
 }
 
 .sidebar-item {
-	padding: 10px 0;
-	font-size: 16px;
-	color: #82888a;
-	border-bottom: 1px solid #CCC;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #82888a;
+  border-bottom: 1px solid #CCC;
 }
 
 .sidebar-link {
-	color: #82888a;
-	text-decoration: none;
+  color: #82888a;
+  text-decoration: none;
 }
 
-.sidebar-link:hover, .sidebar-link-focus {
-	color: #cacccd;
-	text-decoration: none;
+.sidebar-link:hover, .sidebar-link:focus {
+  color: #cacccd;
+  text-decoration: none;
 }
 
 .active.sidebar-link {
-	color: #565a5c;
-	font-weight: bold;
-	text-decoration: none;
+  color: #565a5c;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 label {
-	color: #565a5c;
-	font-size: 1.1em;
-	font-weight: 500;
-	margin-bottom: 10px
+  color: #565a5c;
+  font-size: 1.1em;
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 
 select {
-	color: #565a5c;
-	background-color: #fff;
-	width: 100%;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-	padding: 10px;
-	appearance: none;
-	-moz-appearance: none;
-	-webkit-appearance: none;	
+  color: #565a5c;
+  background-color: #fff;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 10px;
+  appearance: none;
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
 }
 
 .select:before {
-	content: '\25bc';
-	font-size: 1.2em;
-	position: absolute;
-	color: #82888A;
-	top: 40px;
-	right: 30px;
-	transform: scale(0.84, 0.42);
+  content: '\25bc';
+  font-size: 1.2em;
+  position: absolute;  
+  color: #82888A;
+  top: 40px;  
+  right: 30px;
+  transform: scale(0.84, 0.42);
 }
 
 input[type="checkbox"] {
-	height: 1.25em;
-	width: 1.25em;
-	margin-bottom: -0.25em;
-	margin-right: 5px;
-	vertical-align: top;
-	border: 1px solid #c4c4c4;
-	border-radius: 2px;
-	appearance: none;
-	-moz-appearance: none;
-	-webkit-appearance: none;	
+  height: 1.25em;
+  width: 1.25em;
+  margin-bottom: -0.25em;
+  margin-right: 5px;
+  vertical-align: top;
+  border: 1px solid #c4c4c4;
+  border-radius: 2px;
+  appearance: none;
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
 }
 
 input[type="checkbox"]:checked:before {
@@ -229,28 +213,76 @@ input[type="checkbox"]:checked:before {
 }
 
 .amenities li {
-	margin-bottom: 10px;
-	list-style-type: none;
+  margin-bottom: 10px;
+  list-style-type: none;
 }
 
 .text-line-through {
-	text-decoration: line-through;
+  text-decoration: line-through
 }
 
 .reservation-table td {
-	width: 100%;
-	border: 1px solid #dce0e0;
-	padding: 10px;
+  width: 100%;
+  border: 1px solid #dce0e0;
+  padding: 10px;
 }
 
 .wide {
-	width: 100;
+  width: 100%;
 }
 
 .price_tag {
-	background-color: #606567;
-	color: #fff;
-	font-size: 20px;
-	padding: 10px;
-	margin-bottom: 10px;
+  background-color: #606567;
+  color: #fff;
+  font-size: 20px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.conversation {
+  color: #7f7f7f;
+  padding: 10px;
+}
+
+.conversation:hover, .conversation:focus {
+  background-color: #F4F4F5;
+}
+
+#wrapper { 
+  width:960px;
+  margin:0 auto;
+}
+
+#sidebar {
+  float:right;
+  width:340px;
+}
+
+#sidebar #widget {
+  width:340px;
+  height: 600px;
+  margin-bottom:10px;
+  border-bottom:1px solid #ccc;
+}
+
+#article {
+  width:560px;
+}
+
+.discovery-card {
+  background-size: cover;
+  background-position: center;
+  height: 326px;
+}
+
+.va-container {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.va-middle {
+  color: #fff;
+  vertical-align: middle;
+  display: table-cell;
 }
