--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
 
-    <%= link_to "Sign In with Facebook", user_omniauth_authorize_path(:facebook), class: "btn btn-primary" %>
+    <%= link_to "Sign In with Facebook", user_facebook_omniauth_authorize_path(:facebook), class: "btn btn-primary" %>
     
     <h2>Sign up</h2>
 
@@ -20,7 +20,7 @@
       <div class="form-group">
         <% if @validatable %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
+          <% end %>
           <%= f.password_field :password, autocomplete: "off", :class => "form-control", :placeholder => "Password" %>
       </div>
 
