--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<%- if controller_name != 'sessions' %>
+<%- if controller_name != 'sessions' %> <br>
   <%= link_to "Log in", new_session_path(resource_name) %><br />
 <% end -%>
 
