Fixed typo in schema database

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -2,7 +2,7 @@
 
   <div id="sidebar">
     <div id="widget" class="sticky">
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAYa7lGIhr1oTJwbCxJDrujV1ds6-9L3U"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKDQfcRM2Uys-Z2_NNKdh21Ux20f2nG04"></script>
       <script>
         function initialize() {
           var mapCanvas = document.getElementById('widget');
@@ -19,7 +19,7 @@
           <% @arrRooms.each do |room| %>
             var marker = new google.maps.Marker({
               position: new google.maps.LatLng(<%= room.latitude %>, <%= room.longitude %>),
-              title: "AirAlien"
+              title: "Naptivity"
             });
             marker.setMap(map);
           <% end %>
