--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -10,7 +10,7 @@
             <% if @arrRooms.length > 0 %>
               center: new google.maps.LatLng(<%= @arrRooms[0].latitude %>, <%= @arrRooms[0].longitude %>),
             <% else %>
-              center: new google.maps.LatLng(37.773972, -122.431297),
+              center: new google.maps.LatLng(41.85, -87.64999999999998),
             <% end %>
             zoom: 14,
             mapTypeId: google.maps.MapTypeId.ROADMAP
