First commit in a long time

--- a/naptivity/app/views/reservations/_form.html.erb
+++ b/naptivity/app/views/reservations/_form.html.erb
@@ -32,7 +32,7 @@
 				</tr>
 				<tr>
 					<td>Total</td>
-					<td>RM<span id="reservation_sum"></span></td>
+					<td>$<span id="reservation_sum"></span></td>
 				</tr>
 			</tbody>
 		</table>
