--- a/naptivity/app/views/shared/_navbar.html.erb
+++ b/naptivity/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://naptivity-freshmurry.c9users.io">Naptivity</a>
+            <%= link_to "Naptivity", root_path, class: "navbar-brand" %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
 
